ProjetoAlphaParser.py
# Generated from ProjetoAlpha.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ProjetoAlphaParser ( Parser ):

    grammarFileName = "ProjetoAlpha.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "':'", "';'", "'inteiro'", "'real'", 
                     "'booleano'", "'{'", "'}'", "'='", "'se'", "'('", "')'", 
                     "'senao'", "'while'", "'leia'", "'escreva'", "','", 
                     "'||'", "'&&'", "'<'", "'>'", "'<='", "'>='", "'=='", 
                     "'!='", "'+'", "'-'", "'*'", "'/'", "'verdadeiro'", 
                     "'falso'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "TRUE", "FALSE", "INT", 
                      "REAL", "ID", "WS" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_varDecl = 2
    RULE_tipo = 3
    RULE_bloco = 4
    RULE_stmt = 5
    RULE_atribuicao = 6
    RULE_seStmt = 7
    RULE_whileStmt = 8
    RULE_ioStmt = 9
    RULE_expr = 10
    RULE_exprAnd = 11
    RULE_exprRel = 12
    RULE_exprAdd = 13
    RULE_exprMul = 14
    RULE_exprPrimaria = 15

    ruleNames =  [ "program", "decls", "varDecl", "tipo", "bloco", "stmt", 
                   "atribuicao", "seStmt", "whileStmt", "ioStmt", "expr", 
                   "exprAnd", "exprRel", "exprAdd", "exprMul", "exprPrimaria" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    TRUE=30
    FALSE=31
    INT=32
    REAL=33
    ID=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloco(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.BlocoContext,0)


        def EOF(self):
            return self.getToken(ProjetoAlphaParser.EOF, 0)

        def decls(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.DeclsContext,0)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ProjetoAlphaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 32
                self.decls()


            self.state = 35
            self.bloco()
            self.state = 36
            self.match(ProjetoAlphaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjetoAlphaParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(ProjetoAlphaParser.VarDeclContext,i)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_decls

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecls" ):
                listener.enterDecls(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecls" ):
                listener.exitDecls(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = ProjetoAlphaParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.varDecl()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ProjetoAlphaParser.ID, 0)

        def tipo(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.TipoContext,0)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = ProjetoAlphaParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(ProjetoAlphaParser.T__0)
            self.state = 44
            self.match(ProjetoAlphaParser.ID)
            self.state = 45
            self.match(ProjetoAlphaParser.T__1)
            self.state = 46
            self.tipo()
            self.state = 47
            self.match(ProjetoAlphaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = ProjetoAlphaParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 112) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjetoAlphaParser.StmtContext)
            else:
                return self.getTypedRuleContext(ProjetoAlphaParser.StmtContext,i)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloco" ):
                return visitor.visitBloco(self)
            else:
                return visitor.visitChildren(self)




    def bloco(self):

        localctx = ProjetoAlphaParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(ProjetoAlphaParser.T__6)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17179984896) != 0):
                self.state = 52
                self.stmt()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(ProjetoAlphaParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atribuicao(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.AtribuicaoContext,0)


        def seStmt(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.SeStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.WhileStmtContext,0)


        def ioStmt(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.IoStmtContext,0)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = ProjetoAlphaParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.atribuicao()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.seStmt()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.whileStmt()
                pass
            elif token in [15, 16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.ioStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ProjetoAlphaParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.ExprContext,0)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = ProjetoAlphaParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(ProjetoAlphaParser.ID)
            self.state = 67
            self.match(ProjetoAlphaParser.T__8)
            self.state = 68
            self.expr()
            self.state = 69
            self.match(ProjetoAlphaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.ExprContext,0)


        def bloco(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjetoAlphaParser.BlocoContext)
            else:
                return self.getTypedRuleContext(ProjetoAlphaParser.BlocoContext,i)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_seStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeStmt" ):
                listener.enterSeStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeStmt" ):
                listener.exitSeStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeStmt" ):
                return visitor.visitSeStmt(self)
            else:
                return visitor.visitChildren(self)




    def seStmt(self):

        localctx = ProjetoAlphaParser.SeStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_seStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(ProjetoAlphaParser.T__9)
            self.state = 72
            self.match(ProjetoAlphaParser.T__10)
            self.state = 73
            self.expr()
            self.state = 74
            self.match(ProjetoAlphaParser.T__11)
            self.state = 75
            self.bloco()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 76
                self.match(ProjetoAlphaParser.T__12)
                self.state = 77
                self.bloco()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.ExprContext,0)


        def bloco(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.BlocoContext,0)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = ProjetoAlphaParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(ProjetoAlphaParser.T__13)
            self.state = 81
            self.match(ProjetoAlphaParser.T__10)
            self.state = 82
            self.expr()
            self.state = 83
            self.match(ProjetoAlphaParser.T__11)
            self.state = 84
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IoStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ProjetoAlphaParser.ID, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjetoAlphaParser.ExprContext)
            else:
                return self.getTypedRuleContext(ProjetoAlphaParser.ExprContext,i)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_ioStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIoStmt" ):
                listener.enterIoStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIoStmt" ):
                listener.exitIoStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIoStmt" ):
                return visitor.visitIoStmt(self)
            else:
                return visitor.visitChildren(self)




    def ioStmt(self):

        localctx = ProjetoAlphaParser.IoStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ioStmt)
        self._la = 0 # Token type
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(ProjetoAlphaParser.T__14)
                self.state = 87
                self.match(ProjetoAlphaParser.T__10)
                self.state = 88
                self.match(ProjetoAlphaParser.ID)
                self.state = 89
                self.match(ProjetoAlphaParser.T__11)
                self.state = 90
                self.match(ProjetoAlphaParser.T__2)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.match(ProjetoAlphaParser.T__15)
                self.state = 92
                self.match(ProjetoAlphaParser.T__10)
                self.state = 93
                self.expr()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 94
                    self.match(ProjetoAlphaParser.T__16)
                    self.state = 95
                    self.expr()
                    self.state = 100
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 101
                self.match(ProjetoAlphaParser.T__11)
                self.state = 102
                self.match(ProjetoAlphaParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprAnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjetoAlphaParser.ExprAndContext)
            else:
                return self.getTypedRuleContext(ProjetoAlphaParser.ExprAndContext,i)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = ProjetoAlphaParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.exprAnd()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 107
                self.match(ProjetoAlphaParser.T__17)
                self.state = 108
                self.exprAnd()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprAndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprRel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjetoAlphaParser.ExprRelContext)
            else:
                return self.getTypedRuleContext(ProjetoAlphaParser.ExprRelContext,i)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_exprAnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAnd" ):
                listener.enterExprAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAnd" ):
                listener.exitExprAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAnd" ):
                return visitor.visitExprAnd(self)
            else:
                return visitor.visitChildren(self)




    def exprAnd(self):

        localctx = ProjetoAlphaParser.ExprAndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exprAnd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.exprRel()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 115
                self.match(ProjetoAlphaParser.T__18)
                self.state = 116
                self.exprRel()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprRelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprAdd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjetoAlphaParser.ExprAddContext)
            else:
                return self.getTypedRuleContext(ProjetoAlphaParser.ExprAddContext,i)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_exprRel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprRel" ):
                listener.enterExprRel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprRel" ):
                listener.exitExprRel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprRel" ):
                return visitor.visitExprRel(self)
            else:
                return visitor.visitChildren(self)




    def exprRel(self):

        localctx = ProjetoAlphaParser.ExprRelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exprRel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.exprAdd()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 66060288) != 0):
                self.state = 123
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 66060288) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 124
                self.exprAdd()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprAddContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprMul(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjetoAlphaParser.ExprMulContext)
            else:
                return self.getTypedRuleContext(ProjetoAlphaParser.ExprMulContext,i)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_exprAdd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprAdd" ):
                listener.enterExprAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprAdd" ):
                listener.exitExprAdd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAdd" ):
                return visitor.visitExprAdd(self)
            else:
                return visitor.visitChildren(self)




    def exprAdd(self):

        localctx = ProjetoAlphaParser.ExprAddContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_exprAdd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.exprMul()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26 or _la==27:
                self.state = 131
                _la = self._input.LA(1)
                if not(_la==26 or _la==27):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 132
                self.exprMul()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprMulContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprPrimaria(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ProjetoAlphaParser.ExprPrimariaContext)
            else:
                return self.getTypedRuleContext(ProjetoAlphaParser.ExprPrimariaContext,i)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_exprMul

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprMul" ):
                listener.enterExprMul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprMul" ):
                listener.exitExprMul(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprMul" ):
                return visitor.visitExprMul(self)
            else:
                return visitor.visitChildren(self)




    def exprMul(self):

        localctx = ProjetoAlphaParser.ExprMulContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_exprMul)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.exprPrimaria()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28 or _la==29:
                self.state = 139
                _la = self._input.LA(1)
                if not(_la==28 or _la==29):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 140
                self.exprPrimaria()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprPrimariaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ProjetoAlphaParser.INT, 0)

        def REAL(self):
            return self.getToken(ProjetoAlphaParser.REAL, 0)

        def TRUE(self):
            return self.getToken(ProjetoAlphaParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(ProjetoAlphaParser.FALSE, 0)

        def ID(self):
            return self.getToken(ProjetoAlphaParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(ProjetoAlphaParser.ExprContext,0)


        def getRuleIndex(self):
            return ProjetoAlphaParser.RULE_exprPrimaria

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprPrimaria" ):
                listener.enterExprPrimaria(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprPrimaria" ):
                listener.exitExprPrimaria(self)
